--- a/ci/Gemfile.rails-3.2
+++ b/ci/Gemfile.rails-3.2
@@ -1,8 +1,8 @@
 source :rubygems
 
-gem 'i18n', '~> 0.6.0'
-gem 'activerecord', '~> 3.2.0'
-gem 'activesupport', '~> 3.2.0'
+gem 'i18n'
+gem 'activerecord'
+gem 'activesupport'
 
 gem 'sqlite3'
 gem 'mocha'
